--- a/google-homepage.css
+++ b/google-homepage.css
@@ -14,3 +14,11 @@
     font-size: 14px;
     font-family: arial, sans-serif;
 }
+
+.logo {
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: contain;
+    object-position: center bottom;
+    width: auto;
+}
