Add results and footer text

--- a/google-serp.css
+++ b/google-serp.css
@@ -20,11 +20,23 @@
     margin: 7px 10% 5px 0;
 }
 
+#footer-menu {
+
+}
+
+#page-numbers {
+    
+}
+
 .ad-label {
 
 }
 
 .url {
+
+}
+
+.breadcrumbs {
 
 }
 
