--- a/google-serp.css
+++ b/google-serp.css
@@ -84,20 +84,44 @@ header {
 }
 
 footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
+    display: block;
+    box-sizing: border-box;
     width: 100%;
     background-color: #f2f2f2;
     text-align: center;
-    padding: 25px 0 25px 0;
+    padding: 25px 0 50px 0;
     font-size: 14px;
+}
+
+.search-types {
+    list-style-type: none;
+    margin: 0;
+    padding: 30px 0 5px 12%;
+}
+
+.search-type {
+    display: inline-grid;
+    justify-content: center;
+    font-size: 14px;
+    padding: 0 10px 0 0;
+    color: rgb(95,99,104);
+}
+
+.search-type-icon {
+    display: inline-block;
+    justify-content: center;
+    max-width: 100%;
+    height: auto;
+    padding: 0 20px 0 10px;
+    width: 5px;
+    height: 5px;
+
 }
 
 #next-page {
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding: 0 0 25px 0;
     text-align: center;
 }
 
