--- a/google-serp.css
+++ b/google-serp.css
@@ -8,6 +8,20 @@
     margin-right: 12px;
 }
 
+#line {
+    color:rgba(209, 209, 209, 0.87);
+    border-color:rgba(209, 209, 209, 0.87);
+    margin-left: auto;
+    margin-right: auto;
+    height: 1px;
+}
+
+#result-count {
+    color:#70757a;
+    padding: 3px 0 0 12%;
+    font-size: 12px;
+}
+
 #search-bar {
     display: float;
     float: left;
@@ -75,12 +89,12 @@
 
 .result {
     margin: 0 0 30px 0;
-    padding: 0 0 0 18%;
+    padding: 0 0 0 12%;
 }
 
 header {
     margin: 0;
-    padding: 20px 0 40px 0;
+    padding: 20px 0 0 0;
 }
 
 footer {
@@ -102,8 +116,9 @@ footer {
 .search-type {
     display: inline-grid;
     justify-content: center;
+    vertical-align: 6px;
     font-size: 14px;
-    padding: 0 10px 0 0;
+    padding: 10px 15px 0 0;
     color: rgb(95,99,104);
 }
 
@@ -112,10 +127,7 @@ footer {
     justify-content: center;
     max-width: 100%;
     height: auto;
-    padding: 0 20px 0 10px;
-    width: 5px;
-    height: 5px;
-
+    padding: 10px 0 0 0;
 }
 
 #next-page {
